исправить опечатку в теге

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         </button>
         <form class="popup__form">
           <h3 class="popup__title">Редактировать профиль</h3>
-          <fildset class="popup__profile">
+          <fieldset class="popup__profile">
             <input type="text" name="firstname" placeholder="Жак-Ив Кусто" class="popup__profile-item popup__profile-item_name">
             <input type="text" name="proffesion" placeholder="Исследователь" class="popup__profile-item popup__profile-item_job">
-          </fildset>
+          </fieldset>
           <button type="submit" class="popup__profile-save">Сохранить</button>
         </form>
       </div>
