поставить тег main

--- a/index.html
+++ b/index.html
@@ -12,89 +12,91 @@
     <header class="header">
       <img src="./images/header-logo.svg" alt="Логотип Мэсто" class="header__logo">
     </header>
-    <section class="profile">
-      <img src="./images/profile-avatar.jpg" alt="Жак-Ив Кусто" class="profile__avatar">
-      <div class="profile__about">
-        <div class="profile__name">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button class="profile__open-window">
-            <img src="./images/profile-button.svg" alt="кнопка открытия окна" class="profile__open-window-button">
+    <main>
+      <section class="profile">
+        <img src="./images/profile-avatar.jpg" alt="Жак-Ив Кусто" class="profile__avatar">
+        <div class="profile__about">
+          <div class="profile__name">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button class="profile__open-window">
+              <img src="./images/profile-button.svg" alt="кнопка открытия окна" class="profile__open-window-button">
+            </button>
+          </div>
+          <p class="profile__subtitle">Исследователь океана</p>
+        </div>
+        <div class="profile__button">
+          <img src="./images/profile-plus.svg" alt="кнопка открытия окна" class="profile__button-plus">
+        </div>
+      </section>
+      <section class="elements">
+        <div class="element">
+          <figure class="element__card">
+            <img src="./images/elements-karachaevsk.jpg" alt="Карачаевск" class="element__image">
+            <figcaption>
+              <h2 class="element__title">Карачаевск</h2>
+            </figcaption>
+          </figure>
+          <button class="element__button-like">
+            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
           </button>
         </div>
-        <p class="profile__subtitle">Исследователь океана</p>
-      </div>
-      <div class="profile__button">
-        <img src="./images/profile-plus.svg" alt="кнопка открытия окна" class="profile__button-plus">
-      </div>
-    </section>
-    <section class="elements">
-      <div class="element">
-        <figure class="element__card">
-          <img src="./images/elements-karachaevsk.jpg" alt="Карачаевск" class="element__image">
-          <figcaption>
-            <h2 class="element__title">Карачаевск</h2>
-          </figcaption>
-        </figure>
-        <button class="element__button-like">
-          <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
-        </button>
-      </div>
-      <div class="element">
-        <figure class="element__card">
-          <img src="./images/elements-elbrus.jpg" alt="Гора Эльбрус" class="element__image">
-          <figcaption>
-            <h2 class="element__title">Гора Эльбрус</h2>
-          </figcaption>
-        </figure>
-        <button class="element__button-like">
-          <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
-        </button>
-      </div>
-      <div class="element">
-        <figure class="element__card">
-          <img src="./images/elements-dombai.jpg" alt="Домбай" class="element__image">
-          <figcaption>
-            <h2 class="element__title">Домбай</h2>
-          </figcaption>
-        </figure>
-        <button class="element__button-like">
-          <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
-        </button>
-      </div>
-      <div class="element">
-        <figure class="element__card">
-          <img src="./images/elements-elbrus.jpg" alt="Гора Эльбрус" class="element__image">
-          <figcaption>
-            <h2 class="element__title">Гора Эльбрус</h2>
-          </figcaption>
-        </figure>
-        <button class="element__button-like">
-          <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
-        </button>
-      </div>
-      <div class="element">
-        <figure class="element__card">
-          <img src="./images/elements-dombai.jpg" alt="Домбай" class="element__image">
-          <figcaption>
-            <h2 class="element__title">Домбай</h2>
-          </figcaption>
-        </figure>
-        <button class="element__button-like">
-          <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
-        </button>
-      </div>
-      <div class="element">
-        <figure class="element__card">
-          <img src="./images/elements-karachaevsk.jpg" alt="Карачаево-Черкессия" class="element__image">
-          <figcaption>
-            <h2 class="element__title">Карачаево-Черкессия</h2>
-          </figcaption>
-        </figure>
-        <button class="element__button-like">
-          <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
-        </button>
-      </div>
-    </section>
+        <div class="element">
+          <figure class="element__card">
+            <img src="./images/elements-elbrus.jpg" alt="Гора Эльбрус" class="element__image">
+            <figcaption>
+              <h2 class="element__title">Гора Эльбрус</h2>
+            </figcaption>
+          </figure>
+          <button class="element__button-like">
+            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
+          </button>
+        </div>
+        <div class="element">
+          <figure class="element__card">
+            <img src="./images/elements-dombai.jpg" alt="Домбай" class="element__image">
+            <figcaption>
+              <h2 class="element__title">Домбай</h2>
+            </figcaption>
+          </figure>
+          <button class="element__button-like">
+            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
+          </button>
+        </div>
+        <div class="element">
+          <figure class="element__card">
+            <img src="./images/elements-elbrus.jpg" alt="Гора Эльбрус" class="element__image">
+            <figcaption>
+              <h2 class="element__title">Гора Эльбрус</h2>
+            </figcaption>
+          </figure>
+          <button class="element__button-like">
+            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
+          </button>
+        </div>
+        <div class="element">
+          <figure class="element__card">
+            <img src="./images/elements-dombai.jpg" alt="Домбай" class="element__image">
+            <figcaption>
+              <h2 class="element__title">Домбай</h2>
+            </figcaption>
+          </figure>
+          <button class="element__button-like">
+            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
+          </button>
+        </div>
+        <div class="element">
+          <figure class="element__card">
+            <img src="./images/elements-karachaevsk.jpg" alt="Карачаево-Черкессия" class="element__image">
+            <figcaption>
+              <h2 class="element__title">Карачаево-Черкессия</h2>
+            </figcaption>
+          </figure>
+          <button class="element__button-like">
+            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
+          </button>
+        </div>
+      </section>
+    </main>  
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
