--- a/index.html
+++ b/index.html
@@ -18,15 +18,11 @@
         <div class="profile__about">
           <div class="profile__name">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <button class="profile__open-window">
-              <img src="./images/profile-button.svg" alt="редактирование профиля" class="profile__open-window-icon">
-            </button>
+            <button class="profile__open-window"></button>
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__button">
-          <img src="./images/profile-plus.svg" alt="добавление места" class="profile__icon-plus">
-        </button>
+        <button class="profile__button"></button>
       </section>
       <section class="elements">
         <div class="element">
@@ -37,7 +33,6 @@
             </figcaption>
           </figure>
           <button class="element__button-like">
-            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
           </button>
         </div>
         <div class="element">
@@ -48,7 +43,6 @@
             </figcaption>
           </figure>
           <button class="element__button-like">
-            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
           </button>
         </div>
         <div class="element">
@@ -59,7 +53,6 @@
             </figcaption>
           </figure>
           <button class="element__button-like">
-            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
           </button>
         </div>
         <div class="element">
@@ -70,7 +63,6 @@
             </figcaption>
           </figure>
           <button class="element__button-like">
-            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
           </button>
         </div>
         <div class="element">
@@ -81,7 +73,6 @@
             </figcaption>
           </figure>
           <button class="element__button-like">
-            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
           </button>
         </div>
         <div class="element">
@@ -92,7 +83,6 @@
             </figcaption>
           </figure>
           <button class="element__button-like">
-            <img src="./images/element-like.svg" alt="Поставить лайк" class="element__like">
           </button>
         </div>
       </section>
