исправить background у кнопок

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
     </footer>
     <div class="popup">
       <div class="popup__container">
-        <button class="popup__close-button">
-          <img class="popup__close-img" src="./images/popup-close.svg" alt="кнопка закрытия окна">
-        </button>
+        <button class="popup__close-button"></button>
         <form class="popup__form" name="edit_profile">
           <h3 class="popup__title">Редактировать профиль</h3>
           <fieldset class="popup__profile">
@@ -47,9 +45,7 @@
     </div>
     <div class="popup popup_place">
       <div class="popup__container">
-        <button class="popup__close-button popup__close-button_place">
-          <img class="popup__close-img" src="./images/popup-close.svg" alt="кнопка закрытия окна">
-        </button>
+        <button class="popup__close-button popup__close-button_place"></button>
         <form class="popup__form popup__form_place">
           <h3 class="popup__title">Новое место</h3>
           <fieldset class="popup__profile">
@@ -62,12 +58,10 @@
     </div>
     <div class="popup-image">
       <figure class="popup-image__info">
-        <button class="popup-image__close-button">
-          <img class="popup__close-img" src="./images/popup-close.svg" alt="кнопка закрытия окна">
-        </button>
+        <button class="popup-image__close-button"></button>
         <img src="./images/profile-avatar.jpg" alt="" class="popup-image__view">
         <figcaption>
-          <p class="popup-image__title">xzczcvzczc</p>
+          <p class="popup-image__title"></p>
         </figcaption>
       </figure>
     </div>
