--- a/index.html
+++ b/index.html
@@ -31,24 +31,36 @@
     <div class="popup popup_input-window" id="popup_edit-profile">
       <div class="popup__container">
         <button class="popup__close-button"></button>
-        <form class="popup__form" name="edit_profile">
+        <form id="form__edit-profile" class="popup__form" name="edit_profile" novalidate>
           <h3 class="popup__title">Редактировать профиль</h3>
           <fieldset class="popup__profile">
-            <input type="text" name="firstname" placeholder="Введите имя" class="popup__input popup__input_type_name">
-            <input type="text" name="proffesion" placeholder="Введите вид деятельности" class="popup__input popup__input_type_job">
-          </fieldset>
-          <button type="submit" class="popup__save-button">Сохранить</button>
+            <label>
+              <input id="firstname" type="text" name="firstname" placeholder="Введите имя" class="popup__input popup__input_type_name" required minlength="2" maxlength="40">
+              <span class="firstname-error popup__error-message"></span>
+            </label>
+            <label>
+              <input id="proffesion" type="text" name="proffesion" placeholder="Введите вид деятельности" class="popup__input popup__input_type_job" required minlength="2" maxlength="200">
+              <span class="proffesion-error popup__error-message"></span>
+            </label>
+            </fieldset>
+          <button id="submit_edit-profile" type="submit" class="popup__save-button">Сохранить</button>
         </form>
       </div>
     </div>
     <div class="popup popup_input-window" id="popup_place">
       <div class="popup__container">
         <button class="popup__close-button popup__close-button_place"></button>
-        <form class="popup__form popup__form_place">
+        <form class="popup__form popup__form_place" novalidate>
           <h3 class="popup__title">Новое место</h3>
           <fieldset class="popup__profile">
-            <input type="text" name="card" placeholder="Название" class="popup__input popup__input_type_card">
-            <input type="text" name="link" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link">
+            <label class="popup__field">
+              <input id="card" type="text" name="card" placeholder="Название" class="popup__input popup__input_type_card" required minlength="2" maxlength="30">
+              <span class="card-error popup__error-message"></span>
+            </label>
+            <label class="popup__field">
+              <input id="link" type="url" name="link" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" required>
+              <span class="link-error popup__error-message"></span>
+            </label>
           </fieldset>
           <button type="submit" class="popup__save-button">Сохранить</button>
         </form>
@@ -56,7 +68,7 @@
     </div>
     <div class="popup popup_image">
       <figure class="popup__info">
-        <button class="popup__image-close-button"></button>
+        <button class="popup__close-button"></button>
         <img src="./images/profile-avatar.jpg" alt="" class="popup__view">
         <figcaption>
           <p class="popup__image-title"></p>
@@ -80,5 +92,6 @@
     </div>
   </template>
   <script src="./scripts/index.js"></script>
+  <script src="./scripts/validate.js"></script>
 </body>
 </html>
