--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </button>
     </div>
   </template>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+
+  <script type="module" src="./scripts/index.js" defer></script>
 </body>
 </html>
