--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
+  <link rel="stylesheet" href="./src/pages/index.css">
   <title>Document</title>
 </head>
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <img src="./images/header-logo.svg" alt="Логотип Мэсто" class="header__logo">
+      <img src="./src/images/header-logo.svg" alt="Логотип Мэсто" class="header__logo">
     </header>
     <main>
       <section class="profile">
-        <img src="./images/profile-avatar.jpg" alt="Жак-Ив Кусто" class="profile__avatar">
+        <img src="./src/images/profile-avatar.jpg" alt="Жак-Ив Кусто" class="profile__avatar">
         <div class="profile__about">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button class="profile__open-window"></button>
@@ -69,7 +69,7 @@
     <div class="popup popup_image">
       <figure class="popup__info">
         <button class="popup__close-button"></button>
-        <img src="./images/profile-avatar.jpg" alt="" class="popup__view">
+        <img src="./src/images/profile-avatar.jpg" alt="" class="popup__view">
         <figcaption>
           <p class="popup__image-title"></p>
         </figcaption>
@@ -79,7 +79,7 @@
   <template id="card_template">
     <div class="element">
       <figure class="element__card">
-        <img src="./images/elements-karachaevsk.jpg" alt="Карачаевск" class="element__image">
+        <img src="./src/images/elements-karachaevsk.jpg" alt="Карачаевск" class="element__image">
         <figcaption>
           <h2 class="element__title">Карачаевск</h2>
         </figcaption>
@@ -87,11 +87,11 @@
       <button class="element__button-like">
       </button>
       <button class="element__button-delete">
-        <img class="element__delete" src="./images/element-delete.svg" alt="Удалить">
+        <img class="element__delete" src="./src/images/element-delete.svg" alt="Удалить">
       </button>
     </div>
   </template>
 
-  <script type="module" src="./scripts/index.js" defer></script>
+  <script type="module" src="./src/pages/index.js" defer></script>
 </body>
 </html>
