--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Document</title>
 </head>
 <body class="page">
   <div class="page__container">
     <header class="header">
-      <img src="./images/header-logo.svg" alt="Логотип Мэсто" class="header__logo">
-    </header>
+      <img src="<%=require('./images/header-logo.svg')%>" alt="Логотип Мэсто" class="header__logo">    </header>
     <main>
       <section class="profile">
-        <img src="./images/profile-avatar.jpg" alt="Жак-Ив Кусто" class="profile__avatar">
+        <img src="<%=require('./images/profile-avatar.jpg')%>" alt="Жак-Ив Кусто" class="profile__avatar">
         <div class="profile__about">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button class="profile__open-window"></button>
@@ -31,16 +29,20 @@
     <div class="popup popup_input-window" id="popup_edit-profile">
       <div class="popup__container">
         <button class="popup__close-button"></button>
-        <form id="form__edit-profile" class="popup__form" name="edit_profile" novalidate>
+        <form id="form__edit-profile" class="popup__form" name="edit_profile" novalidate> <!-- ? -->
           <h3 class="popup__title">Редактировать профиль</h3>
           <fieldset class="popup__profile">
             <label>
               <input id="firstname" type="text" name="firstname" placeholder="Введите имя" class="popup__input popup__input_type_name" required minlength="2" maxlength="40">
-              <span class="firstname-error popup__error-message"></span>
+              <div class="popup__span-error">
+                <span class="firstname-error popup__error-message"></span>
+              </div>
             </label>
             <label>
               <input id="proffesion" type="text" name="proffesion" placeholder="Введите вид деятельности" class="popup__input popup__input_type_job" required minlength="2" maxlength="200">
-              <span class="proffesion-error popup__error-message"></span>
+              <div class="popup__span-error">
+                <span class="proffesion-error popup__error-message"></span>
+              </div>
             </label>
             </fieldset>
           <button id="submit_edit-profile" type="submit" class="popup__save-button">Сохранить</button>
@@ -50,16 +52,20 @@
     <div class="popup popup_input-window" id="popup_place">
       <div class="popup__container">
         <button class="popup__close-button popup__close-button_place"></button>
-        <form class="popup__form popup__form_place" novalidate>
+        <form class="popup__form popup__form_place" name="add_place" novalidate>
           <h3 class="popup__title">Новое место</h3>
           <fieldset class="popup__profile">
             <label class="popup__field">
-              <input id="card" type="text" name="card" placeholder="Название" class="popup__input popup__input_type_card" required minlength="2" maxlength="30">
-              <span class="card-error popup__error-message"></span>
+              <input id="card" type="text" name="name" placeholder="Название" class="popup__input popup__input_type_card" required minlength="2" maxlength="30">
+              <div class="popup__span-error">
+                <span class="card-error popup__error-message"></span>
+              </div>
             </label>
             <label class="popup__field">
               <input id="link" type="url" name="link" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" required>
-              <span class="link-error popup__error-message"></span>
+              <div class="popup__span-error">
+                <span class="link-error popup__error-message"></span>
+              </div>
             </label>
           </fieldset>
           <button type="submit" class="popup__save-button">Сохранить</button>
@@ -76,7 +82,7 @@
       </figure>
     </div>
   </div>
-  <template id="card_template">
+  <template id="CARD_TEMPLATE_SLR">
     <div class="element">
       <figure class="element__card">
         <img src="./images/elements-karachaevsk.jpg" alt="Карачаевск" class="element__image">
@@ -87,11 +93,9 @@
       <button class="element__button-like">
       </button>
       <button class="element__button-delete">
-        <img class="element__delete" src="./images/element-delete.svg" alt="Удалить">
+        <img class="element__delete" src="<%=require('./images/element-delete.svg')%>" alt="Удалить">
       </button>
     </div>
   </template>
-
-  <script type="module" src="./scripts/index.js" defer></script>
 </body>
 </html>
