--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,6 @@
         </form>
       </div>
     </div>
-
-
     <div class="popup popup_input-window popup__edit-avatar">
       <div class="popup__container">
         <button class="popup__close-button popup__close-button_place"></button>
@@ -85,7 +83,7 @@
           <h3 class="popup__title">Обновить аватар</h3>
           <fieldset class="popup__profile">
             <label class="popup__field">
-              <input id="link" type="url" name="avatar" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" required>
+              <input id="avatar" type="url" name="avatar" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" required>
                 <span class="link-error popup__error-message"></span>
             </label>
           </fieldset>
