--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
         </form>
       </div>
     </div>
-    <div class="popup popup_input-window popup__delete-confirm">
+    <div class="popup popup_input-window popup_delete-confirm">
       <div class="popup__container">
         <button class="popup__close-button popup__close-button_place"></button>
         <form class="popup__form popup__form_place" name="add_place" novalidate>
@@ -76,7 +76,7 @@
         </form>
       </div>
     </div>
-    <div class="popup popup_input-window popup__edit-avatar">
+    <div class="popup popup_input-window popup_edit-avatar">
       <div class="popup__container">
         <button class="popup__close-button popup__close-button_place"></button>
         <form class="popup__form popup__form_place" name="update_avatar" novalidate>
