--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
           <fieldset class="popup__profile">
             <label class="popup__field">
               <input id="avatar" type="url" name="avatar" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" required>
-                <span class="link-error popup__error-message"></span>
+                <span class="avatar-error popup__error-message"></span>
             </label>
           </fieldset>
           <button type="submit" class="popup__save-button">Сохранить</button>
